[workspace]
members = [
    "2015/day01",
    "2015/day02",
    "2015/day03",
    "2015/day04",
    "2015/day05",
    "2015/day06",
    "2015/day07",
    "2015/day08",
    "2015/day09",
    "2015/day10",
    "2015/day11",
    "2015/day12",
    "2015/day13",
    "2015/day14",
    "2015/day15",
    "2015/day16",
    "2015/day17",
    "2015/day18",
    "2015/day19",
    "2015/day20",
    "2015/day21",
    "2015/day22",
    "2015/day23",
    "2015/day24",
    "2015/day25",
    "2016/day01",
    "2016/day02",
    "2016/day03",
    "2016/day04",
    "2016/day05",
    "2016/day06",
    "2016/day07",
    "2016/day08",
    "2016/day09",
    "2016/day10",
    "2016/day11",
    "2016/day12",
    "2016/day13",
    "2016/day14",
    "2016/day15",
    "2016/day16",
    "2016/day17",
    "2016/day18",
    "2016/day19",
    "2016/day20",
    "2016/day21",
    "2016/day22",
    "2016/day23",
    "2016/day24",
    "2016/day25",
    "2017/day01",
    "2017/day02",
    "2017/day03",
    "2017/day04",
    "2017/day05",
    "2017/day06",
    "2017/day07",
    "2017/day08",
    "2017/day09",
    "2017/day10",
    "2017/day11",
    "2017/day12",
    "2017/day13",
    "2017/day14",
    "2017/day15",
    "2017/day16",
    "2017/day17",
    "2017/day18",
    "2017/day19",
    "2017/day20",
    "2017/day21",
    "2017/day22",
    "2017/day23",
    "2017/day24",
    "2017/day25",
    "2018/day01",
    "2018/day02",
    "2018/day03",
    "2018/day04",
    "2018/day05",
    "2018/day06",
    "2018/day07",
    "2018/day08",
    "2018/day09",
    "2018/day10",
    "2018/day11",
    "2018/day12",
    "2018/day13",
    "2018/day14",
    "2018/day15",
    "2018/day16",
    "2018/day17",
    "2018/day18",
    "2018/day19",
    "2018/day20",
    "2018/day21",
    "2018/day22",
    "2018/day23",
    "2018/day24",
    "2018/day25",
    "2019/day01",
    "2019/day02",
    "2019/day03",
    "2019/day04",
    "2019/day05",
    "2019/day06",
    "2019/day07",
    "2019/day08",
    "2019/day09",
    "2019/day10",
    "2019/day11",
    "2019/day12",
    "2019/day13",
    "2019/day14",
    "2019/day15",
    "2019/day16",
    "2019/day17",
    "2019/day18",
    "2019/day19",
    "2019/day20",
    "2019/day21",
    "2019/day22",
    "2019/day23",
    "2019/day24",
    "2019/day25",
    "2020/day01",
    "2020/day02",
    "2020/day03",
    "2020/day04",
    "2020/day05",
    "2020/day06",
    "2020/day07",
    "2020/day08",
    "2020/day09",
    "2020/day10",
    "2020/day11",
    "2020/day12",
    "2020/day13",
    "2020/day14",
    "2020/day15",
    "2020/day16",
    "2020/day17",
    "2020/day18",
    "2020/day19",
    "2020/day20",
    "2020/day21",
    "2020/day22",
    "2020/day23",
    "2020/day24",
    "2020/day25",
    "2021/day01",
    "2021/day02",
    "2021/day03",
    "2021/day04",
    "2021/day05",
    "2021/day06",
    "2021/day07",
    "2021/day08",
    "2021/day09",
    "2021/day10",
    "2021/day11",
    "2021/day12",
    "2021/day13",
    "2021/day14",
    "2021/day15",
    "2021/day16",
    "2021/day17",
    "2021/day18",
    "2021/day19",
    "2021/day20",
    "2021/day21",
    "2021/day22",
    "2021/day23",
    "2021/day24",
    "2021/day25",
    "2022/day01",
    "2022/day02",
    "2022/day03",
    "2022/day04",
    "2022/day05",
    "2022/day06",
    "2022/day07",
    "2022/day08",
    "2022/day09",
    "2022/day10",
    "2022/day11",
    "2022/day12",
    "2022/day13",
    "2022/day14",
    "2022/day15",
    "2022/day16",
    "2022/day17",
    "2022/day18",
    "2022/day19",
    "2022/day20",
    "2022/day21",
    "2022/day22",
    "2022/day23",
    "2022/day24",
    "2022/day25",
    "2023/day01",
    "2023/day02",
    "2023/day03",
    "2023/day04",
    "2023/day05",
    "2023/day06",
    "2023/day07",
    "2023/day08",
    "2023/day09",
    "2023/day10",
    "2023/day11",
    "2023/day12",
    "2023/day13",
    "2023/day14",
    "2023/day15",
    "2023/day16",
    "2023/day17",
    "2023/day18",
    "2023/day19",
    "2023/day20",
    "2023/day21",
    "2023/day22",
    "2023/day23",
    "2023/day24",
    "2023/day25",
    "2024/day01",
    "2024/day02",
    "2024/day03",
    "2024/day04",
    "2024/day05",
    "2024/day06",
    "2024/day07",
    "2024/day08",
    "2024/day09",
    "2024/day10",
    "2024/day11",
    "2024/day12",
    "2024/day13",
    "2024/day14",
    "2024/day15",
    "2024/day16",
    "2024/day17",
    "2024/day18",
    "2024/day19",
    "2024/day20",
    "2024/day21",
    "2024/day22",
    "2024/day23",
    "2024/day24",
    "2024/day25",
    "aochelpers"
    ]
resolver = "2"
