[package]
name = "aochelpers"
version = "0.8.2"
edition = "2021"
license = "Apache-2.0"
description = "A set of structs and associated methods that cover common use=cases when solving Advent Of Code problems."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
dirs = "5.0.1"
reqwest = {features = ["blocking"], version = "0.12.9"}
log = "0.4.20"
anyhow = "1.0.76"
num-traits = "0.2.19"