[package]
name = "Aoc-2025-10"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aochelpers = "0.9.2"
good_lp = { version = "1.14.2", features = ["highs"], default-features = false }
z3 = { version = "0.19.5", features = ["bundled"]}
miniz_oxide = "^0.8.9"